build(deps): update build dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,34 +86,34 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
-commitizen = "*"
-darglint = "*"
-dlint = "*"
-flake8 = "*"
-flake8-alfred = "*"
-flake8-bandit = "*"
-flake8-black = "*"
-flake8-bugbear = "*"
-flake8-builtins = "*"
-flake8-comprehensions = "*"
-flake8-docstrings = "*"
-flake8-logging-format = "*"
-flake8-markdown = "*"
-flake8-pytest-style = "*"
-flake8-typing-imports = "*"
-flake8-use-fstring = "*"
-flakehell = "*"
-ipython = "*"
-mkapi = "*"
-mkdocs = "*"
-mkdocs-material = "*"
-mkdocs-simple-hooks = "*"
-mypy = "*"
-pre-commit = "*"
-pytest = "*"
-pytest-cov = "*"
-pytest-randomly = "*"
-toml-sort = "*"
+commitizen = "^1.23.0"
+darglint = "^1.5.1"
+dlint = "^0.10.3"
+flake8 = "^3.8.3"
+flake8-alfred = "^1.1.1"
+flake8-bandit = "^2.1.2"
+flake8-black = "^0.2.0"
+flake8-bugbear = "^20.1.4"
+flake8-builtins = "^1.5.3"
+flake8-comprehensions = "^3.2.3"
+flake8-docstrings = "^1.5.0"
+flake8-logging-format = "^0.6.0"
+flake8-markdown = "^0.2.0"
+flake8-pytest-style = "^1.2.1"
+flake8-typing-imports = "^1.9.0"
+flake8-use-fstring = "^1.1"
+flakehell = "^0.5.0"
+ipython = "^7.16.1"
+mkapi = "^1.0.11"
+mkdocs = "^1.1.2"
+mkdocs-material = "^5.4.0"
+mkdocs-simple-hooks = "^0.1.1"
+mypy = "^0.782"
+pre-commit = "^2.6.0"
+pytest = "^5.4.3"
+pytest-cov = "^2.10.0"
+pytest-randomly = "^3.4.1"
+toml-sort = "^0.18.0"
 
 [tool.poetry.scripts]
 pyfugue = 'pyfugue.main:main'
