build: enable darglint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ flake8-black = ["+*"]
 flake8-bugbear = ["+*"]
 flake8-builtins = ["+*"]
 flake8-comprehensions = ["+*"]
-flake8-docstrings = ["+*", "-D412"]
+flake8-darglint = ["+*"]
+flake8-docstrings = ["+*", "-D401", "-D412"]
 flake8-logging-format = ["+*"]
 flake8-pytest-style = ["+*"]
 flake8-typing-imports = ["+*"]
