--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,8 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 incremental = "^17.5.0"
 python = "^3.8"
+twisted = "^20.3.0"
+urwid = { version = "^2.1.1", optional = true }
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
@@ -114,6 +116,9 @@ pytest = "^5.4.3"
 pytest-cov = "^2.10.0"
 pytest-randomly = "^3.4.1"
 toml-sort = "^0.18.0"
+
+[tool.poetry.extras]
+tui = [ "urwid" ]
 
 [tool.poetry.scripts]
 pyfugue = 'pyfugue.main:main'
