--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,7 @@ pre-commit = "^2.6.0"
 pytest = "^6.0.1"
 pytest-cov = "^2.10.0"
 pytest-randomly = "^3.4.1"
+pytest-xdist = "^1.34.0"
 toml-sort = "^0.18.0"
 
 [tool.poetry.extras]
