--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pyflakes = ["-F401"]
 flake8-docstrings = ["-D1??"]
 flake8-darglint = ["-DAR*", "+D0??"]
 flake8-bandit = ["-S101"]
+pylint = ["-E0611"]
 
 [tool.flakehell.plugins]
 dlint = ["+*"]
