--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ incremental = "^17.5.0"
 python = "^3.8"
 twisted = "^20.3.0"
 urwid = { version = "^2.1.1", optional = true }
+sortedcontainers = "^2.2.2"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
