--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,10 +53,10 @@ repos:
       - id: flakehell
         types: [file, text]
         files: \.(ipynb|md|py|rst|yaml|yml)$
-        additional_dependencies: [flake8-alfred, flake8-bandit, flake8-black, flake8-bugbear,
-          flake8-builtins, flake8-comprehensions, flake8-docstrings, flake8-logging-format,
-          flake8-markdown, flake8-pytest-style, flake8-typing-imports, flake8-use-fstring,
-          flakehell, darglint, dlint, pep8-naming]
+        additional_dependencies: [flake8-alfred, flake8-bandit, flake8-bugbear, flake8-builtins,
+          flake8-comprehensions, flake8-docstrings, flake8-logging-format, flake8-markdown,
+          flake8-pytest-style, flake8-typing-imports, flake8-use-fstring, flakehell, darglint,
+          dlint, pep8-naming]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: ''
